--- a/package.json
+++ b/package.json
@@ -3,5 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "author": "Chris Samperisi <csamperisi@everfi.com>",
+  "scripts": {
+    "download": "node grab-emoji"
+  },
   "license": "MIT"
 }
